--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <li>
                         <a href="#">
                             <label for="slide03" class="left"></label>
-                            <div class="textbox">
+                            <div class="textbox1">
                                 <h3>숲으로 지구의 지구력을 높입니다</h3>
                                 <p>유한킴벌리는 37년간 5,431만 그루의 나무를 심고 가꾸고 있습니다</p>
                             </div>
@@ -164,9 +164,10 @@
 
         </section>
         <aside class="visionTxt">
-            <div class="textbox">
+            <div class="textbox2">
                 <h3>We Act Life-Health-Planet</h3>
                 <p>우리는 생활-건강-지구환경을 위해 행동합니다</p>
+                <p>dddd</p>
             </div>
         </aside>
         <section class="product">
