--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
     <link rel="icon" href="imgs/favicon.ico">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="js/web/script.js"></script>
 </head>
 <body>
@@ -138,26 +137,70 @@
                 </div><!-- slidewrap post-slider end -->
             </div><!-- section page-wrapper end -->
             <section class="event">
-                <div class="inner">
-                    <h1 class="secTitle">우리 생활에 가까운 숲을 <span class="secTitleB">만들다</span></h1>
+                <div class="eventInner">
                     <div class="contents">
-                        <div class="page1">
-                            <div class="rec"></div>
-                            <div class="img"></div>
-                            <div class="control"></div>
+                        <h3 class="secTitle">우리 생활에 가까운 숲을 <span class="secTitleB">만들다</span></h3>
+                        <div class="rec">
+                            <div class="txtbox">
+                                <h4>도시민에게 가까이 다가가는,<br> 도시숲</h4>
+                                <p>Since 2003</p>
+                                <p>
+                                    숲을 더 가까이, 도시와 지역에서 만날 수 있는 도시숲 2005년 부터<br>
+                                    ‘서울숲 조성’ 활동 참여를 시작으로 12개 동네 숲 조성을 통해<br>
+                                    도시 공간 내의 부족한 녹지공간확정에 기여하고 있습니다.
+                                </p>
+                                <span>735</span><span>개소</span> <span>870,000</span><span>m<sup>2</sup></span>
+                                <p><a href="#">더보기 &gt;</a></p>
+                            </div>
+                            <div class="img1"></div>
                         </div>
-                        <div class="page2">
-                            <div class="rec"></div>
-                            <div class="img"></div>
-                            <div class="control"></div>
+                    </div>
+                    <div class="contents">
+                        <h3 class="secTitle">행복한 삶을 위한 숲을 <span class="secTitleB">만나다</span></h3>
+                        <div class="rec">
+                            <div class="txtbox">
+                                <h4>깨끗한 환경을 미래에게,<br> 신혼부부나무심기</h4>
+                                <p>Since 2002</p>
+                                <p>
+                                    나무를 심는 즐거움을 느끼고 풍요로운 자연환경을 만드는 신혼부부<br>
+                                    나무심기 매년 봄 신혼부부를 초청하여 대대적인 나무심기 활등을 펼쳐<br> 
+                                    숲의 중요성을 알리고, 숲 체험과 봉사활동의 기회를 제공하고 있습니다.
+                                </p>
+                                <span>21,444</span><span>명</span> <span>226,100</span><span>그루</span>
+                                <p><a href="#">더보기 &gt;</a></p>
+                            </div>
+                            <div class="img2"></div>
                         </div>
-                        <div class="page3">
-                            <div class="rec"></div>
-                            <div class="img"></div>
-                            <div class="control"></div>
+                    </div>
+                    <div class="contents">
+                        <h3 class="secTitle">맑고 푸른 지구를 <span class="secTitleB">꿈꾸다</span></h3>
+                        <div class="rec">
+                            <div class="txtbox">
+                                <h4>미래 여성 환경리더 양성,<br> 그린캠프</h4>
+                                <p>Since 1988</p>
+                                <p>
+                                    전국 여고생들을 대상으로 하는 자연체험교육 그린캠프를 개최하고<br> 있습니다. 트레킹을 통해 숲환경의 중요성을 새롭게 배우고, 팀빌딩을 통해<br>
+                                    숲을 보존하고 가꾸어야 할 가치를 알게 됩니다.
+                                </p>
+                                <span>51</span><span>회</span> <span>4,661</span><span>명</span>
+                                <p><a href="#">더보기 &gt;</a></p>
+                            </div>
+                            <div class="img3"></div>
                         </div>
                     </div>
                 </div>
+                <!-- <p class="btnprev">
+                    <img src="imgs/arrowL.png" alt="left">
+                </p> -->
+                <p class="btnplay">
+                    <img src="imgs/play.png" alt="play">
+                </p>
+                <p class="btnpause">
+                    <img src="imgs/pause.png" alt="pause">
+                </p>
+                <!-- <p class="btnnext">
+                    <img src="imgs/arrowR.png" alt="left">
+                </p> -->
             </section>
             <section class="news">
                 <h1 class="secTitle"><span class="secTitleB">유한킴벌리</span> 소식</h1>
