--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                     <h2 class="hidden">메인 네비게이터</h2>
                     <ul>
                         <li>
-                            <a href="#">회사소개</a>
+                            <a href="sub_company.html">회사소개</a>
                             <ul>
-                                <li><a href="#">유한킴벌리 소개</a></li>
-                                <li><a href="#">인재채용</a></li>
-                                <li><a href="#">사업현황</a></li>
+                                <li><a href="sub_company.html">유한킴벌리 소개</a></li>
+                                <li><a href="sub_company.html">인재채용</a></li>
+                                <li><a href="sub_company.html">사업현황</a></li>
                             </ul>
                         </li>
                         <li>
