--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
                     <h2 class="hidden">메인 네비게이터</h2>
                     <ul>
                         <li>
-                            <a href="sub_company.html">회사소개</a>
+                            <a href="sub1_company.html">회사소개</a>
                             <ul>
-                                <li><a href="sub_company.html">유한킴벌리 소개</a></li>
-                                <li><a href="sub_company.html">인재채용</a></li>
-                                <li><a href="sub_company.html">사업현황</a></li>
+                                <li><a href="sub1_company.html">유한킴벌리 소개</a></li>
+                                <li><a href="sub1_company.html">인재채용</a></li>
+                                <li><a href="sub1_company.html">사업현황</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="#">뉴스룸</a>
+                            <a href="sub2_news.html">뉴스룸</a>
                             <ul>
-                                <li><a href="#">보도자료</a></li>
-                                <li><a href="#">YK on AIR</a></li>
-                                <li><a href="#">그래픽 뉴스</a></li>
-                                <li><a href="#">공지사항</a></li>
-                                <li><a href="#">이벤트</a></li>
+                                <li><a href="sub2_news.html">보도자료</a></li>
+                                <li><a href="sub2_news.html">YK on AIR</a></li>
+                                <li><a href="sub2_news.html">그래픽 뉴스</a></li>
+                                <li><a href="sub2_news.html">공지사항</a></li>
+                                <li><a href="sub2_news.html">이벤트</a></li>
                             </ul>
                         </li>
                         <li>
