--- a/sub1_company.html
+++ b/sub1_company.html
@@ -20,7 +20,7 @@
     </style>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/web/header.css">
-    <link rel="stylesheet" href="css/web/sub_company.css">
+    <link rel="stylesheet" href="css/web/sub1_company.css">
     <link rel="stylesheet" href="css/web/footer.css">
     <link rel="icon" href="imgs/favicon.ico">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -43,21 +43,21 @@
                     <h2 class="hidden">메인 네비게이터</h2>
                     <ul>
                         <li>
-                            <a href="sub_company.html">회사소개</a>
+                            <a href="sub1_company.html">회사소개</a>
                             <ul>
-                                <li><a href="sub_company.html">유한킴벌리 소개</a></li>
-                                <li><a href="sub_company.html">인재채용</a></li>
-                                <li><a href="sub_company.html">사업현황</a></li>
+                                <li><a href="sub1_company.html">유한킴벌리 소개</a></li>
+                                <li><a href="sub1_company.html">인재채용</a></li>
+                                <li><a href="sub1_company.html">사업현황</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="#">뉴스룸</a>
+                            <a href="sub2_news.html">뉴스룸</a>
                             <ul>
-                                <li><a href="#">보도자료</a></li>
-                                <li><a href="#">YK on AIR</a></li>
-                                <li><a href="#">그래픽 뉴스</a></li>
-                                <li><a href="#">공지사항</a></li>
-                                <li><a href="#">이벤트</a></li>
+                                <li><a href="sub2_news.html">보도자료</a></li>
+                                <li><a href="sub2_news.html">YK on AIR</a></li>
+                                <li><a href="sub2_news.html">그래픽 뉴스</a></li>
+                                <li><a href="sub2_news.html">공지사항</a></li>
+                                <li><a href="sub2_news.html">이벤트</a></li>
                             </ul>
                         </li>
                         <li>
@@ -119,13 +119,13 @@
                 <h3>회사소개</h3>
                 <div class="subNav">
                     <ul>
-                        <li><a href="#">유한킴벌리 비전</a></li>
-                        <li><a href="#">대표이사 인사말</a></li>
-                        <li><a href="#">주주회사</a></li>
+                        <li><a href="#btn1">유한킴벌리 비전</a></li>
+                        <li><a href="#btn2">대표이사 인사말</a></li>
+                        <li><a href="#btn3">주주회사</a></li>
                     </ul>
                 </div>
             </section>
-            <section class="sub1Vision">
+            <section class="sub1Vision" id="btn1">
                 <h3 class="secTitle"><span class="secTitleB">유한킴벌리</span> 비전</h3>
                 <div class="containVision">
                     <div class="txtbox">
@@ -188,7 +188,7 @@
                     </div>
                 </div>
             </section>
-            <section class="sub1CEO">
+            <section class="sub1CEO"  id="btn2">
                 <h3 class="secTitle"><span class="secTitleB">대표이사</span> 인사말</h3>
                 <div class="containCEO">
                     <div class="txtbox">
@@ -213,8 +213,8 @@
                     <div class="CEOimg"></div>
                 </div>
             </section>
-            <section class="sub1Stock">
-                <h3 class="secTitle"><span class="secTitleB">주주회사</span></h3>
+            <section class="sub1Stock"  id="btn3">
+                <h3 class="secTitle"><span class="secTitleB" >주주회사</span></h3>
                 <p>
                     유한킴벌리는 사회공헌을 통해 사회 발전에 기여하고,<br>
                     <span>선진적인 경영기업을 가장 먼저 도입한 유한양행의 정신</span>과<br>
@@ -284,6 +284,6 @@
                 </div><!-- innerBtm end -->
             </div><!-- footerBtm end -->
         </footer>
-    </div>
+    </div><!-- centerAll end -->
 </body>
 </html>
