--- a/sub2_news.html
+++ b/sub2_news.html
@@ -25,7 +25,6 @@
     </style>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/web/header.css">
-    <link rel="stylesheet" href="css/web/sub1_company.css">
     <link rel="stylesheet" href="css/web/sub2_news.css">
     <link rel="stylesheet" href="css/web/footer.css">
     <link rel="icon" href="imgs/favicon.ico">
@@ -34,7 +33,6 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="js/web/sub1_script.js"></script>
     <script src="js/web/sub2_script.js"></script>
 </head>
 
@@ -70,12 +68,12 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="#">지속가능경영</a>
+                            <a href="sub3_sustainable.html">지속가능경영</a>
                             <ul>
-                                <li><a href="#">우리강산 푸르게 푸르게</a></li>
-                                <li><a href="#">공유가치창출(CSV)</a></li>
-                                <li><a href="#">환경경영</a></li>
-                                <li><a href="#">동반성장</a></li>
+                                <li><a href="sub3_sustainable.html">우리강산 푸르게 푸르게</a></li>
+                                <li><a href="sub3_sustainable.html">공유가치창출(CSV)</a></li>
+                                <li><a href="sub3_sustainable.html">환경경영</a></li>
+                                <li><a href="sub3_sustainable.html">동반성장</a></li>
                             </ul>
                         </li>
                         <li>
