--- a/sub3_sustainable.html
+++ b/sub3_sustainable.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>유한_회사소개</title>
+    <title>유한_지속가능경영</title>
     <style>
         @font-face {
             font-family: 'HangeulNuri-Bold';
@@ -12,7 +12,7 @@
             font-weight: normal;
             font-style: normal;
         } 
-        body{font-family: 'HangeulNuri-Bold','Nanum Gothic', sans-serif ,;}
+        body{font-family: 'HangeulNuri-Bold','Nanum Gothic', sans-serif;}
         .centerAll{
             margin: 0 auto;
             width: 1920px;
@@ -20,14 +20,14 @@
     </style>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/web/header.css">
-    <link rel="stylesheet" href="css/web/sub1_company.css">
+    <link rel="stylesheet" href="css/web/sub3_sustainable.css">
     <link rel="stylesheet" href="css/web/footer.css">
     <link rel="icon" href="imgs/favicon.ico">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="js/web/sub1_script.js"></script>
+    <script src="js/web/sub3_script.js"></script>
 </head>
 <body>
     <div class="centerAll">
@@ -115,126 +115,108 @@
         </header>
         <main>
             <h2 class="hidden">회사소개 본문</h2>
-            <section class="sub1Banner">
-                <h3>회사소개</h3>
+            <section class="sub3Banner">
+                <h3>지속가능경영</h3>
                 <div class="subNav">
                     <ul>
-                        <li><a href="#btn1">유한킴벌리 비전</a></li>
-                        <li><a href="#btn2">대표이사 인사말</a></li>
-                        <li><a href="#btn3">주주회사</a></li>
+                        <li><a href="#btn1">우리강산 푸르게 푸르게</a></li>
+                        <li><a href="#btn2">환경경영</a></li>
+                        <li><a href="#btn3">사회책임활동</a></li>
                     </ul>
                 </div>
             </section>
-            <section class="sub1Vision" id="btn1">
-                <h3 class="secTitle"><span class="secTitleB">유한킴벌리</span> 비전</h3>
+            <section class="sub3Moun" id="btn1">
+                <h3 class="secTitle">우리강산 <span class="secTitleB">푸르게 푸르게</span></h3>
+                <div class="txtbox">
+                    <p>
+                        1984년 시작하여 36년 동안 지속적으로 추진하고 있는 숲환경 캠페인으로<br>
+                        국공유림 나무심기와 숲가꾸기를 통해 건강한 숲을 만드는 것이며,<br>
+                        동시에 이제까지 없던 새로운 숲과 사람의 공존을 우리 사회에 제안하는 것입니다.<br>
+                        주요 프로젝트로 <span>나무심기운동, 지역 숲 모델 조성, 숲가꾸기운동, 도시숲, 학교숲,</span><br>
+                        <span>북한산림복구, 몽골 사막화방지숲, 아름다운숲 보전운동 등과 청소년 그린캠프,</span><br>
+                        <span>시니어 산촌학교, 자연사랑 문학지원사업</span> 등이 있습니다.
+                    </p>
+                </div>
                 <div class="containVision">
-                    <div class="txtbox">
-                        <p>유한킴벌리가 나아가야할 전략방향</p>
-                        <p>Strategic Directions</p>
+                    <div class="symbol1">
+                        <img src="imgs/symbol1.png" alt="symbol1">
+                        <p>나무심기 운동</p>
+                        <p>54,215,825 그루</p>
                     </div>
-                    <div class="icon1">
-                        <p><img src="imgs/icon1.png" alt="icon1"></p>
-                        <p>핵심사업 성장</p>
-                        <p>GROW</p>
-                        <ul>
-                            <li>비즈니스 경쟁력 강화</li>
-                            <li>생산성 향상 및 시장점유율 증가</li>
-                            <li>건강한 성장 지속 및 안정적 투자</li>
-                        </ul>
+                    <div class="symbol2">
+                        <img src="imgs/symbol2.png" alt="symbol2">
+                        <p>도시숲 마을숲 만들기</p>
+                        <p>43,300 그루</p>
                     </div>
-                    <div class="bar"></div>
-                    <div class="icon2">
-                        <p><img src="imgs/icon2.png" alt="icon2"></p>
-                        <p>신사업 확장</p>
-                        <p>INVEST</p>
-                        <ul>
-                            <li>신사업 및 신시장 개척</li>
-                            <li>비즈니스 모델 혁신</li>
-                            <li>끈임없는 도전 및 과감한 투자</li>
-                        </ul>
+                    <div class="symbol3">
+                        <img src="imgs/symbol3.png" alt="symbol3">
+                        <p>신혼부부 나무심기</p>
+                        <p>226,100 그루</p>
                     </div>
-                    <div class="bar"></div>
-                    <div class="icon3">
-                        <p><img src="imgs/icon3.png" alt="icon3"></p>
-                        <p>가치사슬 혁신</p>
-                        <p>INNOVATE</p>
-                        <ul>
-                            <li>오픈 이노베이션</li>
-                            <li>비즈니스 플랫폼 및 채널전략</li>
-                            <li>비즈니스 전과정에서 혁신 가속화</li>
-                        </ul>
+                    <div class="symbol4">
+                        <img src="imgs/symbol4.png" alt="symbol4">
+                        <p>학교숲 만들기</p>
+                        <p>735 개소</p>
                     </div>
-                    <div class="bar"></div>
-                    <div class="icon4">
-                        <p><img src="imgs/icon4.png" alt="icon4"></p>
-                        <p>워닝컬처 강화</p>
-                        <p>WIN</p>
-                        <ul>
-                            <li>다양성과 포용</li>
-                            <li>공정한 인사 협업과 소통</li>
-                            <li>도전·성공을 추구하는 기업문화</li>
-                        </ul>
+                    <div class="symbol5">
+                        <img src="imgs/symbol5.png" alt="symbol5">
+                        <p>북한 산림 복구</p>
+                        <p>12,859,150 그루</p>
                     </div>
-                    <div class="bar"></div>
-                    <div class="icon5">
-                        <p><img src="imgs/icon5.png" alt="icon5"></p>
-                        <p>사회·환경 공헌</p>
-                        <p>CARE</p>
-                        <ul>
-                            <li>친환경 제품 혁신</li>
-                            <li>자원활동을 통한 사회변화 주도</li>
-                            <li>지구환경 보호 기여</li>
-                        </ul>
+                    <div class="symbol6">
+                        <img src="imgs/symbol6.png" alt="symbol6">
+                        <p>몽골 사막화 방지</p>
+                        <p>11,753,652 그루</p>
+                    </div>
+                    <div class="symbol7">
+                        <img src="imgs/symbol7.png" alt="symbol7">
+                        <p> 그린캠프</p>
+                        <p>51 회</p>
+                    </div>
+                    <div class="symbol8">
+                        <img src="imgs/symbol8.png" alt="symbol8">
+                        <p>시니어 산촌학교</p>
+                        <p>7기</p>
                     </div>
                 </div>
             </section>
-            <section class="sub1CEO"  id="btn2">
-                <h3 class="secTitle"><span class="secTitleB">대표이사</span> 인사말</h3>
-                <div class="containCEO">
+            <section class="sub3Env" id="btn2">
+                <h3 class="secTitle"><span class="secTitleB">환경경영</span></h3>
+                <div class="containEnv">
                     <div class="txtbox">
-                        <h4>
-                            반갑습니다.<br>
-                            유한킴벌리 진재승입니다
-                        </h4>
+                        <h4><span style="color: #3B6AAD;">유한킴벌리의 환경경영 3.0 선언</span></h4>
                         <p>
-                            유한킴벌리는 고객 여러분의 관심과 사랑으로 성장하고,<br>
-                            고객님의 목소리와 조언을 통해 변화와 혁신을 이루고자 노력하고 있습니다.
-                        </p>
+                            유한킴벌리는 지구환경 보호를 위한 전 지구적인 노력에 동참하고,<br>
+                            이를 앞장서 실천할 것임을 약속합니다.
+                        </p><br>
+                        <p> 
+                            <span style="color: #00aae7;">약속1.</span> 유한킴벌리는 지구환경 보호를 위해 2030년까지 지속가능한 소재 100%를 적용한 제품과 포장재를 만들겠습니다.<br>
+                            <span style="color: #1F8CDD;">약속2.</span> 유한킴벌리 탄소중립을 위하여 친환경 정책을 수립하고 , 환경지수를 관리하여 공개하겠습니다.<br>
+                            <span style="color: #3B6AAD;">약속3.</span> 유한킴벌리 사원은 미래세대와 더 나은 사회를 위하여 환경경영 3.0선언에 동참하고 실천하겠습니다.
+                        </p><br>
                         <p>
-                            <br>모든 것이 급변해도 고객을 향한 유한킴벌리의 진심은<br>
-                            한결같아야 한다고 생각합니다.
+                            YK는 지구 환경보호를 위한 전 지구적인 노력에 <span style="color: #00aae7;">동참</span>하고,<br>
+                            사회와 함께 성장할 것임을 <span style="color: #1F8CDD;">선언</span>하고,<br>
+                            이를 앞장서 실천할 것임을 <span style="color: #3B6AAD;">약속</span>합니다.
                         </p>
-                        <p>
-                            <br>항상 고객과 함께 사회와 같이 성장할 수 있도록 노력하겠습니다.<br>
-                            고맙습니다.
-                        </p>
-                        <p>대표이사 <span style="font-weight: bold;">진재승</span></p>
                     </div>
-                    <div class="CEOimg"></div>
                 </div>
             </section>
-            <section class="sub1Stock"  id="btn3">
-                <h3 class="secTitle"><span class="secTitleB" >주주회사</span></h3>
-                <p>
-                    유한킴벌리는 사회공헌을 통해 사회 발전에 기여하고,<br>
-                    <span>선진적인 경영기업을 가장 먼저 도입한 유한양행의 정신</span>과<br>
-                    <span>세계 최고의 건강위생용품으로 세계적인 브랜드를 보유하고 있는 킴벌리클라크</span>의<br>
-                    뛰어난 기술력이 결합하여 설립되었습니다.
-                </p>
-                <div class="yybox">
-                    <div class="caption">
-                        <a href="#">
-                            <p>유한양행</p>
-                            <span><span>바로가기</span> <i class="fas fa-arrow-right"></i></span>
-                        </a>
+            <section class="sub3Society"  id="btn3">
+                <h3 class="secTitle"><span class="secTitleB">사회책임활동</span></h3>
+                <div class="containSo">
+                    <p>
+                        유한킴벌리는 지속가능한 사회를 위한<br>
+                        <span style="color: #1F8CDD;">사회공헌 3대 추진방향</span>을 선언합니다.
+                    </p>
+                    <div class="society1">
+                        <p>진정성</p>
                     </div>
-                </div>
-                <div class="kcbox">
-                    <div class="caption">
-                        <a href="#">
-                            <p>Kimberly Clark</p>
-                            <span><span>바로가기</span> <i class="fas fa-arrow-right"></i></span>
-                        </a>
+                    <div class="society2">
+                        <p>지속성</p>
+                    </div>
+                    <div class="society3">
+                        <p>투명성</p>
                     </div>
                 </div>
             </section>
